--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,14 @@ p {
     padding-bottom: 30px;
 }
 
+.profile-picture-container {
+    padding: 5px;
+    background-color: white;
+    border-radius: 50%;
+    max-width: fit-content;
+    margin: 0 auto;
+}
+
 .profile-picture {
     border-radius: 50%;
 }
