--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,7 @@ p {
 
 .profile-info {
     font-weight: 700;
-    padding-top: 30px;
-    padding-bottom: 15px;
+    padding: 10px 0;
 }
 
 .profile-age, .profile-location {
